# why2025-firmware-esp32p4

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  partitions.csv  partitions.ods  sdkconfig  sdkconfig.defaults  shell.nix
ch32asm/: ch32_readmem.S  ch32_writemem.S  compile.sh  linkerscript.ld
components/badge-bsp/: CMakeLists.txt  Kconfig  idf_component.yml
components/badge-bsp/include/: bsp.h  bsp_color.h  bsp_device.h  bsp_input.h  bsp_keymap.h  input.h  keymap.h
components/badge-bsp/include/bsp/: audio_es8156.h  disp_ek79007.h  disp_mipi_dsi.h  disp_st7701.h  es8156.h  input_gpio.h  why2025_coproc.h
components/badge-bsp/include/hardware/: p4devkit.h  why2025.h
components/badge-bsp/pub_include/: bsp.h  bsp_color.h  bsp_device.h  bsp_devtree.h  bsp_event.h  bsp_input.h  bsp_pax.h
components/badge-bsp/src/: bsp.c  bsp_color.c  bsp_device.c  bsp_event.c  bsp_keymap.c  bsp_pax.c  input.c  keymap.c
components/badge-bsp/src/bsp/: audio_es8156.c  disp_ek79007.c  disp_mipi_dsi.c  disp_st7701.c  input_gpio.c  why2025_coproc.c
components/badge-bsp/src/driver/: es8156.c  why2025_coproc.c
components/badge-bsp/src/init/: p4devkit.c  why2025.c
components/esp_lcd_ek79007/: .component_hash  idf_component.yml
components/esp_lcd_st7701/: .component_hash  CMakeLists.txt  esp_lcd_st7701.c  idf_component.yml
components/esp_lcd_st7701/include/: esp_lcd_st7701.h
components/espressif_usb_host_hid/: idf_component.yml
components/esptoolsquared/: CMakeLists.txt  Kconfig  conv_stub.py
components/esptoolsquared/chips/: chips.c  chips.h  stub_esp32c2.c  stub_esp32c3.c  stub_esp32c6.c  stub_esp32p4.c  stub_esp32s2.c  stub_esp32s3.c
components/esptoolsquared/include/: esptoolsquared.h
components/esptoolsquared/src/: esptoolsquared.c
components/sensor_init/: example_sensor_init.c
components/sensor_init/include/: example_sensor_init.h  example_sensor_init_config.h
components/sid/: CMakeLists.txt  celestial_fantasia.inc  commando.inc  libcsidlight.c  phantom.inc  sid.c  still_alive.inc
components/sid/include/: libcsid.h  sid.h
main/: CMakeLists.txt  app.c  app.h  appelf.c  appelf.h  appfs2.c  appfs2.h  appfs_elf.c  appfs_elf.h  display_test.c  display_test.h  idf_component.yml  kbelfx.c  main.c  main.h  rvswd.c  rvswd.h  techdemo.c  techdemo.h
main/fonts/: chakrapetchmedium.c  chakrapetchmedium.h  chakrapetchmedium.json  chakrapetchmedium.pax_font
main/menus/: apps.c  apps.h  root.c  root.h
main/xtulator/: config.h  debuglog.c  machine.c  main.c  memory.c  ports.c  rtc.c  timing.c  timing.h  utility.c  xtulator.h
main/xtulator/chipset/: i8237.c
main/xtulator/cpu/: cpu.c  cpu.h  cpuconf.h
main/xtulator/modules/audio/: sdlaudio.c  sdlaudio.h
main/xtulator/modules/input/: sdlkeys.h
main/xtulator/modules/io/: pcap-win32.c
main/xtulator/modules/video/: cga.c  cga.h  sdlconsole.c  sdlconsole.h  vga.c  vga.h
sdk-files/: CMakeLists.txt
sdk-files/ld/: flash_app.ld
tools/: badgesdk.ld  exported.txt  known unexported.txt  symbol_export.py  symbol_list.py
